<resources>
    <string name="app_name">BRHS Guide</string>
    <string name="title_welcome">Welcome!\nWhere do you want to go?</string>
    <string name="button_map">Map</string>
    <string name="about_us">About Us</string>
    <string name="brhs_caption">Picture of the front of Bordentown Regional High School</string>
    <string name="about_title">Subjects</string>
    <string name="second_card_text">Math\nDepartment</string>
    <string name="first_card_text">English\nDepartment</string>
    <string name="history_department">Social Studies\nDepartment</string>
    <string name="math_logo">Math Logo</string>
    <string name="english_logo">English Logo</string>
    <string name="english_list">Xiaofan Corey \nJennifer Demas \nMichele Fecher \nDavid Franklin \nMatthew Gens \nMorgan Gibbons \nKatina Ingram \nLarry Larned \nMelissa Pinder \nMichelle Quigley \nAnthony Rizzo \nCarleigh Stavrakis</string>
    <string name="english_title">English Teachers</string>
    <string name="math_title">Math Teachers</string>
    <string name="math_list">LeaAnn Bergner\nBeth Bokop\nJodi Dromboski\nChrisopher Glenn\nBrian Guire\nLarry Larned\nJessica Martino\nCarrie Pokallus\nScott Schlenker\nBrian Wheeler</string>
    <string name="social_studies_title">Social Studies Teachers</string>
    <string name="social_studies_list">Michael Brennan\nJennifer DeMas\nMaya Fair\nJames Gill\nLarry Larned\nJennifer McCoy\nJohn Tobias\nKevin Wright</string>
    <string name="social_studies_pic_desc">Globe</string>
    <string name="science_card_text">Science\nDepartment</string>
    <string name="first_floor_map_desc">First floor map</string>
    <string name="map_title">First Floor</string>
    <string name="beaker_desc">Beaker</string>
    <string name="science_list">Kathy Carhart\nKaren Harrison\nRebecca Jacobsen\nSaba Pullella\nMichelle Quigley\nScott Schlenker\nTerry Smith</string>
    <string name="science_teacher_title">Science Teachers</string>
    <string name="second_floor">Second Floor</string>
    <string name="contact">Contact</string>
    <string name="contact_title">Contact\nInformation</string>
    <string name="contact_info">Address\n318 Ward Ave\nBordentown, NJ 08505\n\nPhone\n609–298–0025\n\nFax\n609–291–0347</string>
    <string name="logo_desc">BRHS Logo</string>
    <string name="second_floor_map_desc">Second Floor map</string>
</resources>
